--- a/Week1-Lab/Base.lproj/Main.storyboard
+++ b/Week1-Lab/Base.lproj/Main.storyboard
@@ -104,5 +104,20 @@
             </objects>
             <point key="canvasLocation" x="1436" y="-206"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="eUr-0J-bJ3">
+            <objects>
+                <viewController id="aQm-0l-eh2" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="d8m-Eh-R8q">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="GzZ-wu-NXP"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="94v-SY-bnq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2089" y="654"/>
+        </scene>
     </scenes>
 </document>
